--- a/languages/es.json
+++ b/languages/es.json
@@ -25,7 +25,7 @@
     },
 
     "portfolio":{
-        "some": "Algunos",
+        "some": "Mis",
         "projects": " Projectos",
         "projName1": "Portfolio Personal",
         "projDescription1": "Mi portfolio es una colección de proyectos web desarrollados con HTML, CSS y JavaScript, donde muestro mi habilidad para crear sitios web atractivos y funcionales. Cada proyecto exhibe un enfoque único y creativo, demostrando mi capacidad para diseñar y programar experiencias digitales cautivadoras.",
