--- a/languages/es.json
+++ b/languages/es.json
@@ -34,7 +34,7 @@
         "projName3": "A&C Seguros",
         "projDescription3": "Pagina web realizada para una PYME que se dedica al rubro del seguro patrimonial.",
         "projName4": "Nutricionista Carla Cuenca",
-        "projDescription4": "Proyecto web realizado para una nutricionista profesional, con varios cambios propuestos a futuro, esta es una primera version del sitio.",
+        "projDescription4": "Proyecto web realizado para una nutricionista, con varios cambios propuestos a futuro, esta es una primera version del sitio.",
         "projName5": "",
         "projDescription5": "",
         "projName6": "",
