--- a/languages/en.json
+++ b/languages/en.json
@@ -67,5 +67,33 @@
             "header5":"🚀 Final delivery",
             "p6":"The final delivery is completed once the full project payment has been made. If the client uses their own hosting, the files are delivered ready to upload. If managed hosting is contracted, the website is published directly."
         }
+    },
+    "Portfolio":{
+        "title": "My projects",
+        "intro": "In this section, you’ll find a selection of my most notable projects. Each one reflects my way of working: attention to detail, functional design, and a strong focus on user experience. I enjoy combining creativity and technical skill to turn ideas into visual and digital solutions that truly work.",
+        "project1":{
+            "title": "My portfolio",
+            "description": "My portfolio is a collection of web projects developed with HTML, CSS, and JavaScript, showcasing my ability to create attractive and functional websites. Each project highlights a unique and creative approach, demonstrating my ability to design and build engaging digital experiences."
+        },
+        "project2":{
+            "title": "A&C Seguros<",
+            "description": "Website developed for a small business specializing in property insurance."
+        },
+        "project3":{
+            "title": "Nutrición Nutricalu",
+            "description": "Web project created for a nutritionist, with several updates planned for the future. This is an initial version of the site."
+        },
+        "project4":{
+            "title": "Proyecto Final UTN",
+            "description": "Project completed as the final assignment for the course Laboratory III, part of the University Technical Degree in Programming [UTN]. The project was developed entirely individually."
+        },
+        "project5":{
+            "title": "Orientacion Informatica",
+            "description": "Website developed for the school where I currently work as a teacher, teaching web programming, structured programming, and object-oriented programming."
+        }
+    },
+    "contact":{
+        "title": "Your next project starts here.",
+        "intro": "Fill out the form and I’ll get back to you shortly. The more details you can provide, the better I can help you and prepare a proposal that fits your needs. You can also contact me directly on WhatsApp if you prefer a faster response."
     }
 }
