--- a/languages/es.json
+++ b/languages/es.json
@@ -69,7 +69,7 @@
         }
     },
 
-    "Portfolio":{
+    "portfolio":{
         "title": "Mis proyectos",
         "intro": "En esta sección vas a encontrar una selección de mis proyectos más destacados. Cada uno refleja mi forma de trabajar: atención al detalle, diseño funcional y enfoque en la experiencia del usuario. Me gusta combinar creatividad y técnica para convertir ideas en soluciones visuales y digitales que realmente funcionan.",
         "project1":{
@@ -96,6 +96,9 @@
     "contact":{
         "title": "¿Tenés un proyecto en mente?",
         "intro": "Completá el formulario y te respondo a la brevedad. Cuantos más detalles puedas dar, mejor voy a poder ayudarte y enviarte una propuesta acorde a tus necesidades. También podés escribirme directamente por WhatsApp si preferís un contacto más rápido."
+    },
+    "footer":{
+        "p1": "Desarrollado y programado íntegramente por mí utilizando Visual Studio Code."
     }
 
 
